delete MS office

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body class="body">
     <div class="wrapper">
-      <main>
+      <main class="main">
         <div class="main-description">
           <h1>Norbert Prucnal</h1>
           <h2 class="job-title">
@@ -218,7 +218,6 @@
               <span class="list-secondary-item">Communicative English</span>
             </li>
             <li><span class="list-secondary-item">Driving license</span></li>
-            <li><span class="list-secondary-item">MS Office</span></li>
           </ul>
         </div>
       </aside>
