Add better responsive

--- a/index.html
+++ b/index.html
@@ -152,15 +152,17 @@
       </main>
 
       <aside class="aside">
+        <div class="aside__container">
+        <div class="cv-photo-container">
         <img
           class="cv-photo"
           src="images/photo.jpg"
-          width="350"
           alt="Image of Norbert Prucnal"
         />
+        </div>
         <div class="contact-block">
           <h2 class="header-secondary">Personal information</h2>
-          <ol class="contact-links">
+          <ul class="contact-links">
             <li>
               <img class="icon" src="images/birthday-cake.png" /> 24.03.1997
             </li>
@@ -196,7 +198,7 @@
                 GitHub/Exothreat</a
               >
             </li>
-          </ol>
+          </ul>
         </div>
 
         <div class="soft-skills-block">
@@ -220,6 +222,7 @@
             <li><span class="list-secondary-item">Driving license</span></li>
           </ul>
         </div>
+      </div>
       </aside>
     </div>
   </body>
