portfolio section added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href="style/contact.css" rel="stylesheet" />
     <link href="style/skills.css" rel="stylesheet" />
     <link href="style/introduction.css" rel="stylesheet" />
+    <link href="style/portfolio.css" rel="stylesheet" />
     <link href="style/jobs.css" rel="stylesheet" />
     <link href="style/education.css" rel="stylesheet" />
   </head>
@@ -39,10 +40,34 @@
           </h2>
           <p class="introduction__description">
             I worked many years as a driver and sales representive. I was
-            supervisor of a team for a short time and now I'm trying to get a
-            job in IT. I am fast learner and open for new challanges.<br />
-            That's why I've sent this refferences.
+            supervisor of a team for a brief time and now I'm working hard to
+            get a job in IT. I am "Fast-learner" open for new challanges. That's
+            why I've sent this refferences.
           </p>
+        </section>
+        <section class="portfolio">
+          <h2 class="portfolio__header">Portfolio</h2>
+          <p>Selected projects made by myself</p>
+          <ul class="portfolio__list">
+            <h3 class="portfolio__title">z.Pazurem</h3>
+            <li>
+              Project page:
+              <a href="https://exothreat.github.io/z.Pazurem/"> link </a>
+            </li>
+            <li>
+              GitHub page:
+              <a href="https://github.com/Exothreat/z.Pazurem"> link </a>
+            </li>
+            <h3 class="portfolio__title">GiardDesign</h3>
+            <li>
+              Project page:
+              <a href="https://exothreat.github.io/giarddesign/"> link </a>
+            </li>
+            <li>
+              GitHub page:
+              <a href="https://github.com/Exothreat/giarddesign"> link </a>
+            </li>
+          </ul>
         </section>
         <section class="jobs">
           <h2 class="jobs__header">Work Experience</h2>
@@ -119,7 +144,9 @@
             <li>html 5 and css</li>
             <li>Javascript Es6</li>
             <li>React.js</li>
+            <li>Redux</li>
             <li>GitHub</li>
+            <li>Figma</li>
           </ul>
           <p class="education__schoolDate">January 2023 - up to now</p>
           <h3 class="education__schoolName">Music academy in Lodz in Poland</h3>
@@ -189,10 +216,7 @@
             <h2 class="skills__header">Tech Skills</h2>
             <ul class="skills__list">
               <li>
-                <span class="skills__listItem">html 5</span>
-              </li>
-              <li>
-                <span class="skills__listItem">css</span>
+                <span class="skills__listItem">Scss technologies</span>
               </li>
               <li>
                 <span class="skills__listItem">JS ES6</span>
@@ -202,6 +226,12 @@
               </li>
               <li>
                 <span class="skills__listItem">BEM specification</span>
+              </li>
+              <li>
+                <span class="skills__listItem">Bootstrap framework</span>
+              </li>
+              <li>
+                <span class="skills__listItem">Wordpress experience</span>
               </li>
             </ul>
           </section>
