changes in styles

--- a/index.html
+++ b/index.html
@@ -52,20 +52,28 @@
             <h3 class="portfolio__title">z.Pazurem</h3>
             <li>
               Project page:
-              <a href="https://exothreat.github.io/z.Pazurem/"> link </a>
+              <a href="https://exothreat.github.io/z.Pazurem/">
+                exothreat.github.io/z.Pazurem
+              </a>
             </li>
             <li>
               GitHub page:
-              <a href="https://github.com/Exothreat/z.Pazurem"> link </a>
+              <a href="https://github.com/Exothreat/z.Pazurem">
+                github.com/Exothreat/z.Pazurem
+              </a>
             </li>
             <h3 class="portfolio__title">GiardDesign</h3>
             <li>
               Project page:
-              <a href="https://exothreat.github.io/giarddesign/"> link </a>
+              <a href="https://exothreat.github.io/giarddesign/">
+                exothreat.github.io/giarddesign
+              </a>
             </li>
             <li>
               GitHub page:
-              <a href="https://github.com/Exothreat/giarddesign"> link </a>
+              <a href="https://github.com/Exothreat/giarddesign">
+                github.com/Exothreat/giarddesign
+              </a>
             </li>
           </ul>
         </section>
@@ -166,46 +174,38 @@
           />
           <section class="contact">
             <h2 class="contact__header">Personal information</h2>
-            <ul class="contact__listItem">
-              <li>
+            <ul class="contact__list">
+              <li class="contact__list-item">
                 <img class="contact__icon" src="images/birthday-cake.png" />
                 24.03.1997
               </li>
-              <li>
+              <li class="contact__list-item">
                 <img class="contact__icon" src="images/pin.png" />
                 Rzeszów
               </li>
-              <li>
-                <a class="contact__listItem" href="tel:+48 690 820 177">
+              <li class="contact__list-item">
+                <a href="tel:+48 690 820 177">
                   <img class="contact__icon" src="images/phone.png" />
                   +48 690 820 177
                 </a>
               </li>
-              <li>
-                <a
-                  class="contact__listItem"
-                  href="mailto:nor.bert.prucnal@gmail.com"
-                >
+              <li class="contact__list-item">
+                <a href="mailto:nor.bert.prucnal@gmail.com">
                   <img class="contact__icon" src="images/mail.png" />
                   nor.bert.prucnal@gmail.com
                 </a>
               </li>
-              <li>
+              <li class="contact__list-item">
                 <a
-                  class="contact__listItem"
                   href="https://www.linkedin.com/in/norbert-prucnal-54b241277/"
                   target="_blank"
                 >
                   <img class="contact__icon" src="images/linkedin.png" />
-                  LinkedIn
+                  LinkedIn/Norbert_Prucnal
                 </a>
               </li>
-              <li>
-                <a
-                  class="contact__listItem"
-                  href="https://github.com/exothreat"
-                  target="_blank"
-                >
+              <li class="contact__list-item">
+                <a href="https://github.com/exothreat" target="_blank">
                   <img class="contact__icon" src="images/github.png" />
                   GitHub/Exothreat
                 </a>
@@ -216,22 +216,22 @@
             <h2 class="skills__header">Tech Skills</h2>
             <ul class="skills__list">
               <li>
-                <span class="skills__listItem">Scss technologies</span>
+                <span class="skills__list-item">Scss technologies</span>
               </li>
               <li>
-                <span class="skills__listItem">JS ES6</span>
+                <span class="skills__list-item">JS ES6</span>
               </li>
               <li>
-                <span class="skills__listItem">GitHub environment</span>
+                <span class="skills__list-item">GitHub environment</span>
               </li>
               <li>
-                <span class="skills__listItem">BEM specification</span>
+                <span class="skills__list-item">BEM specification</span>
               </li>
               <li>
-                <span class="skills__listItem">Bootstrap framework</span>
+                <span class="skills__list-item">Bootstrap framework</span>
               </li>
               <li>
-                <span class="skills__listItem">Wordpress experience</span>
+                <span class="skills__list-item">Wordpress experience</span>
               </li>
             </ul>
           </section>
@@ -239,13 +239,13 @@
             <h2 class="skills__header">Additional Skills</h2>
             <ul class="skills__list">
               <li>
-                <span class="skills__listItem">Native Polish</span>
+                <span class="skills__list-item">Native Polish</span>
               </li>
               <li>
-                <span class="skills__listItem">Communicative English</span>
+                <span class="skills__list-item">Communicative English</span>
               </li>
               <li>
-                <span class="skills__listItem">Driving license</span>
+                <span class="skills__list-item">Driving license</span>
               </li>
             </ul>
           </section>
