delete photo of myself

--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
       </main>
       <aside class="aside">
         <div class="aside__container">
-          <img
+          <!-- <img
             class="cv-photo"
             src="images/photo.jpg"
             alt="Image of Norbert Prucnal"
-          />
+          /> -->
           <section class="contact">
             <h2 class="contact__header">Personal information</h2>
             <ul class="contact__list">
